--- a/Code/pom.xml
+++ b/Code/pom.xml
@@ -23,16 +23,30 @@
             <version>13</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.jbehave/jbehave-core -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.jbehave</groupId>
             <artifactId>jbehave-core</artifactId>
-            <version>4.6.1</version>
+            <version>3.5.4</version>
         </dependency>
 
     </dependencies>
 
     <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/java</directory>
+                <includes>
+                    <include>**/*.story</include>
+                </includes>
+            </testResource>
+        </testResources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -49,6 +63,36 @@
                 <configuration>
                     <mainClass>pw.App</mainClass>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jbehave</groupId>
+                <artifactId>jbehave-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>run-stories</id>
+                        <phase>integration-test</phase>
+                        <!--<configuration>-->
+                        <!--
+                        You could list all the scenarios to be run herei using mulitple <scenarioClassName/>
+                        elements, but that seems really tedious, everytime you add a new scenario you'd have
+                        to modifiy the list.  -->
+                        <!--<scenarioClassNames>-->
+                        <!--<scenarioClassName>com.mindflowsolutions.example.AScenarioscenarioClassName>-->
+                        <!--</scenarioClassNames>-->
+
+                        <configuration>
+                            <includes>
+                                <include>**/*ATMScenario.java</include>
+                            </includes>
+
+                            <scope>test</scope>
+                        </configuration>
+                        <goals>
+                            <goal>run-stories-as-embeddables</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
