JavaFX and JBhave in the same project

--- a/mvp/pom.xml
+++ b/mvp/pom.xml
@@ -25,6 +25,18 @@
             <version>4.6.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>13</version>
+        </dependency>
+
     </dependencies>
 
     <build>
