--- a/mvp/pom.xml
+++ b/mvp/pom.xml
@@ -39,6 +39,7 @@
 
     </dependencies>
 
+
     <build>
         <testResources>
             <testResource>
@@ -48,6 +49,17 @@
                 </includes>
             </testResource>
         </testResources>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
